# Survival_Kit

./: .gitignore  TDD-Survival_Kit.docx  ecs_entity_guide.md
Cache/: assetdb.txt  scan.snapshot
Survival_Kit/: Survival_Kit.sln
Survival_Kit/.bin/Debug-x64/: ManagedScripts.deps.json  ScriptAPI.deps.json  ScriptCore.lib  imgui.ini
Survival_Kit/.bin/Release-x64/: ScriptCore.lib  imgui.ini
Survival_Kit/.bin/Tracy-x64/: imgui.ini
Survival_Kit/External_Libraries/include/xtexture.plugin-main/: .gitignore  CMakeLists.txt  LICENSE
Survival_Kit/External_Libraries/include/xtexture.plugin-main/source/: xtexture_rsc_reference.h  xtexture_xgpu_rsc_loader.h
Survival_Kit/External_Libraries/include/xtexture.plugin-main/source/Compiler/: xtexture_compiler.cpp  xtexture_compiler.h
Survival_Kit/External_Libraries/xtexture.plugin/: README.md
Survival_Kit/ManagedScripts/: Class1.cs  ManagedScripts.csproj  ManagedScripts.csproj.Backup.tmp  ManagedScripts.sln  PlayerController.cs  TestScript.cs
Survival_Kit/ScriptAPI/: EngineInterface.cxx  EngineInterface.hxx  Script.cxx  Script.hxx  ScriptAPI.vcxproj  ScriptAPI.vcxproj.filters  TransformComponent.cxx  TransformComponent.hxx
Survival_Kit/ScriptCore/: Application.cpp  Application.h  ImportExport.h  MonoBehaviour.cpp  MonoBehaviour.h  ScriptCore.vcxproj  ScriptCore.vcxproj.filters
Survival_Kit/Survival_Kit/: Survival_Kit.vcxproj  Survival_Kit.vcxproj.filters  game.scn  imgui.ini
gam_300_engine/: gam_300_engine.sln
gam_300_engine/gam_300_engine/: gam_300_engine.vcxproj  gam_300_engine.vcxproj.filters
(+243 files in other folders)
